--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <title>Space Invaders</title>
     <style>
             canvas{
-                box-shadow: rgb(70, 75, 0) 20px 10px 50px;
+                box-shadow: rgb(75, 0, 57) 20px 10px 50px;
             }
             h1{
-                margin: 0px;
+                margin-top: px;
                 margin-bottom: 10px;
                 font-size: 2.9em;
                 font-family: "Press Start 2P";
+                color: rgb(194, 193, 193);
             }
             body{
                 display: flex;
