--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 box-shadow: rgb(75, 0, 57) 20px 10px 50px;
             }
             h1{
-                margin-top: px;
+                margin-top: 20px;
                 margin-bottom: 10px;
                 font-size: 2.9em;
                 font-family: "Press Start 2P";
