--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="src/assets/images/enemy1.png" type="image/x-icon">
-    <title>Space Invaders</title>
+    <link rel="shortcut icon" href="src/assets/images/player.png" type="image/x-icon">
+    <title>Classic Space Invaders | Wanderson Timóteo</title>
     <style>
-            canvas{
-                box-shadow: rgb(75, 0, 57) 20px 10px 50px;
-            }
-            h1{
-                margin-top: 20px;
-                margin-bottom: 10px;
-                font-size: 2.9em;
-                font-family: "Press Start 2P";
-                color: rgb(194, 193, 193);
-            }
-            body{
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                padding: 0px;
-                margin: 0px;
-                height: 100vh;
-                background: linear-gradient(
-                    0deg, 
-                    rgb(29, 0, 95) 0%,
-                    rgb(19, 6, 53) 10% 
-                );
-            }
+        canvas{
+            box-shadow: black 20px 10px 50px;
+        }
+        h1{
+            margin-top: 20px;
+            margin-bottom: 10px;
+            font-size: 2.5em;
+            font-family: "Press Start 2P";
+            color: white;
+        }
+        body{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            margin: 0px;
+            padding: 0px;
+            height: 100vh;
+            background: linear-gradient(
+                0deg,
+                rgba(12, 12, 12, 0.804) 0%,
+                rgb(0, 0, 0) 100%
+            );
+        }
     </style>
 </head>
 <body>
