modicaçao das cores

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="src/assets/images/player.png" type="image/x-icon">
-    <title>Classic Space Invaders | Matheo Acosta</title>
+    <title>Classic Space Invaders | Ana Freitas</title>
     <style>
         canvas{
-            box-shadow: black 20px 10px 50px;
+            box-shadow: rgb(152, 98, 98) 20px 10px 50px;
         }
         h1{
             margin-top: 20px;
             margin-bottom: 10px;
             font-size: 2.5em;
             font-family: "Press Start 2P";
-            color: white;
+            color: rgb(68, 49, 49);
         }
         body{
             display: flex;
@@ -28,8 +28,8 @@
             height: 100vh;
             background: linear-gradient(
                 0deg,
-                rgba(12, 12, 12, 0.804) 0%,
-                rgb(0, 0, 0) 100%
+                rgba(114, 60, 60, 0.804) 0%,
+                rgb(169, 116, 116) 100%
             );
         }
     </style>
