--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="src/assets/images/player.png" type="image/x-icon">
-    <title>Classic Space Invaders | Ana Freitas</title>
+    <title>Classic Space Invaders | geisiany</title>
     <style>
         canvas{
             box-shadow: rgb(152, 98, 98) 20px 10px 50px;
